# mos-gui

./: .gitignore  .gitmodules  README.md  TODO  bower.json  monerodo-backend.cabal  stack.yaml
main/: Main.hs
monerodo-frontend/: bower.json  build.sh  clean.sh  package.json  provision.sh
monerodo-frontend/src/: Main.purs
monerodo-frontend/src/Application/: Types.purs
monerodo-frontend/src/Data/: Zipper.purs
monerodo-frontend/src/Data/SemanticUI/: Button.purs  Grid.purs  Menu.purs  Switch.purs
monerodo-frontend/src/Main/: DeviceMgt.purs  MiniNodo.purs  Mining.purs  MoneroCore.purs
monerodo-frontend/src/Main/DeviceMgt/: Logs.purs
monerodo-frontend/src/Main/Mining/: Cpu.purs  General.purs  Nvidia.purs  Pool.purs
src/: Application.hs  Routes.hs
src/Application/: Assets.hs  Types.hs  WebSocket.hs
src/Data/: WebSocketRPC.hs
src/Pages/: NotFound.hs
src/Routes/: Assets.hs
src/Templates/: Master.hs
